[package]
name = "bison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bison"
crate-type = ["cdylib"]

[dependencies]
jiter = { version = "0.5.0", features = ["python"]}
pyo3 = {version = "0.22.0", features=["num-bigint"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
