[package]
name = "bison"
version = "0.1.1"
edition = "2021"
description="Bison is a fast, lightweight NoSQL database, written in Rust with seamless Python bindings."
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bison"
crate-type = ["cdylib"]

[dependencies]
lru = "0.12.5"
pyo3 = {version = "0.22.0", features=["num-bigint"] }
pythonize = "0.22.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
uuid = {version="1.10.0", features = ["v4"]}
