[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bison-db"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description="Bison is a fast, lightweight NoSQL database, written in Rust with seamless Python bindings."
authors=[{name="Manuel Concepcion Brito"}]
[tool.maturin]
features = ["pyo3/extension-module"]
